# stream_stats

./: .gitignore  README.md  main.py  pyproject.toml
static/: form.html  form.js  stream.html  stream.js
web/: form.html
