[tool.poetry]
name = "stream_stats"
version = "0.1.0"
description = ""
authors = ["Luuk Verweij <luuk_verweij@msn.com>"]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.20.4"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
